Bug Copy link doesn t copy on iOS [ch1025]

--- a/app/js/components/shared/article/styles.scss
+++ b/app/js/components/shared/article/styles.scss
@@ -296,6 +296,8 @@
         .shortLink {
             margin-top: 20px;
             display: block;
+            color: $palette-light-blue-600;
+            border: none;
 
             &:hover{
                 text-decoration: underline;
